--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>Cards:</p>
     <p class="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
