--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
       font-size: 20px;
       font-weight: bold;
       color: #016f32;
-      border-style: hidden;
+      border: none;
       border-radius: 3px;
       padding-top: 5px;
       padding-bottom: 5px;
+      margin-top: 2px;
+      margin-bottom: 2px;
     }
     </style>
   </head>
   <body>
     <h1>Blackjack</h1>
     <p id="message-el">Want to play a round?</p>
-    <p>Cards:</p>
+    <p id="cards-el">Cards:</p>
     <p class="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
+    <button onclick="newCard()">NEW CARD</button>
+    <p id="player-el"></p>
     <script src="js/index.js"></script>
   </body>
 </html>
